--- a/src/app/home/widgets/jogos-destaque/jogos-destaque.component.html
+++ b/src/app/home/widgets/jogos-destaque/jogos-destaque.component.html
@@ -33,7 +33,7 @@
             <ng-template carouselSlide [id]="jogoDestaque.fi" [width]="widthCard">
                 <div class="jogo-destaque">
                     <div class="header">
-                        <span [title]="jogoDestaque.campeonato?.nome">
+                        <span class="campeonato-nome" [title]="jogoDestaque.campeonato?.nome">
                             {{ jogoDestaque.campeonato?.nome }}
                         </span>
                         <span>
