exibir nome customizado do desafio no menu

--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -100,6 +100,7 @@ nav a {
     transition: 300ms;
     white-space: nowrap;
     border-bottom: 2px solid transparent;
+    text-transform: uppercase;
 }
 
 .category a.active, .category a:hover {
