--- a/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
+++ b/src/app/clientes/solicitacao-saque-cliente/solicitacao-saque-cliente.component.html
@@ -187,11 +187,11 @@
                 <div #legitimuz id="legitimuz-container" *ngIf="cadastroCompleto && legitimuzEnabled && !verifiedIdentity">
                     <div id="legitimuz">
                         <div id="verify-identity-text">
-                            {{'saques.identityVerifyNeeded' | translate}}
+                            {{disapprovedIdentity ? ('saques.disapprovedIdentity' | translate) : ('saques.identityVerifyNeeded' | translate)}}
                         </div>
                         <input id="legitimuz-hydrate-cpf" type="hidden" class="form-control inverted-out" [value]="cliente.cpf"/>
                         <input type="hidden" id="legitimuz-ref-id" [value]="token">
-                        <button id="legitimuz-action-verify" class="btn btn-custom">
+                        <button id="legitimuz-action-verify" class="btn btn-custom" *ngIf="!disapprovedIdentity">
                             {{'saques.identityVerify' | translate}}
                             <i class="fa-solid fa-id-card"></i>
                         </button>
