--- a/src/app/rifas/wall/wall.component.css
+++ b/src/app/rifas/wall/wall.component.css
@@ -1,3 +1,9 @@
+.rifa-wall{
+    padding: 25px;
+    min-height: calc(100vh - 468px)
+}
+
 .rifa-banner{
-    margin: 5px 10px;
+    width: 100%;
+    margin: 5px auto;
 }
