--- a/src/app/rifas/wall/wall.component.html
+++ b/src/app/rifas/wall/wall.component.html
@@ -1,22 +1,35 @@
-<div class="base-container">
-    <main style="width: 100%; overflow-y: scroll ">
+
+<!--<app-banners pagina="rifa" ></app-banners>-->
+<div class="rifa-wall">
+    <div class="row">
+
 
         <div class="col col-12">
             <h1>Rifas Ativas</h1>
 
             <div class="row">
-                <div class="col col-md-12 col-lg-6" *ngFor="let sorteio of sorteios" (click)="selecionar(sorteio)">
-                    <div class="row">
+                <div class="col col-12 col-md-6" *ngFor="let sorteio of sorteios">
+                    <a class="hide-mobile" [routerLink]="['/rifas/show/',sorteio.id]" style="">
 
 
-                    <img class="rifa-banner" src="https://weebet.s3.amazonaws.com/{{SLUG}}/banners/{{sorteio.imagem}}" title="{{sorteio.nome}}">
+
+                        <img class="rifa-banner" src="https://weebet.s3.amazonaws.com/{{SLUG}}/banners/{{sorteio.imagem}}" title="{{sorteio.nome}}">
+
+                    </a>
+                    <a class="hide-desktop" [routerLink]="['/rifas/show/',sorteio.id]" style="">
+
+
+
+                        <img class="rifa-banner" src="https://weebet.s3.amazonaws.com/{{SLUG}}/banners/{{sorteio.imagem_mobile}}" title="{{sorteio.nome}}">
+
+                    </a>
+
                 </div>
-                </div>
-                </div>
 
-
+            </div>
         </div>
-    </main>
-    <app-bilhete-rifa></app-bilhete-rifa>
+
+
+    </div>
 </div>
 
