--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -17,23 +17,11 @@
     </div>
 </div>
 
-<div class="indique-ganhe-card" #indiqueGanheCard *ngIf="indiqueGanheHabilitado && (!isLoggedIn || isCliente) && !activeGameCassinoMobile()">
-    <div class="indique-ganhe-card-content">
-        {{'indique_ganhe.indiqueGanheCard' | translate:{'valorGanhoPorIndicacao': valorGanhoPorIndicacao} }}
-        <a (click)="isConnected && redirectIndiqueGanhe()"
-            (mouseover)="!isMobile && !removendoIndiqueGanheCard && btnCardOnMouseOver()"
-            (mouseout)="!isMobile && !removendoIndiqueGanheCard && btnCardOnMouseOut()"
-            class="btn btn-indique-ganhe-card"
-        >{{'indique_ganhe.indicar' | translate}}</a>
-    </div>
-    <a (click)="removerIndiqueGanheCard()" type="button" class="btn-close" aria-label="Close">
-        <i class="fa fa-times"></i>
-    </a>
-</div>
+
 
 <div class="header">
     <div class="side side-left">
-        <a class="" [routerLink]="['/esportes/futebol/jogos']">
+        <a class="" [routerLink]="['/rifas']"> <!--Teste-->
             <img [src]="LOGO" class="logo">
         </a>
     </div>
@@ -293,9 +281,9 @@
                             <a class="dropdown-btn w-150" (click)="abrirDepositos()">
                                 {{'geral.depositar' | translate}}
                             </a>
-                            <a class="dropdown-btn w-150" (click)="abrirSaques()">
-                                {{'geral.sacar' | translate}}
-                            </a>
+<!--                            <a class="dropdown-btn w-150" (click)="abrirSaques()">-->
+<!--                                {{'geral.sacar' | translate}}-->
+<!--                            </a>-->
                         </div>
 
                         <div class="nav">
@@ -459,9 +447,9 @@
                             <a class="dropdown-btn w-130" [routerLink]="['clientes/deposito']" *ngIf="isCliente">
                                 {{'geral.depositar' | translate}}
                             </a>
-                            <a class="dropdown-btn w-130" [routerLink]="['clientes/saque']" *ngIf="isCliente">
-                                {{'geral.sacar' | translate}}
-                            </a>
+<!--                            <a class="dropdown-btn w-130" [routerLink]="['clientes/saque']" *ngIf="isCliente">-->
+<!--                                {{'geral.sacar' | translate}}-->
+<!--                            </a>-->
                             <a class="dropdown-btn w-130" [routerLink]="['cambistas/deposito']" *ngIf="!isCliente && pixCambista">
                                 {{'geral.liberarCredito' | translate}}
                             </a>
@@ -487,18 +475,18 @@
                                 <i class="fa fa-solid fa-table-columns mb-2"></i>
                                 {{'geral.apostas' | translate}}
                             </a>
-                            <a class="dropdown-btn-filled" [routerLink]="['clientes/rollover']"
-                            routerLinkActive="router-link-active"
-                            *ngIf="isCliente">
-                                <i class="fa fa-solid fa-gift mb-2"></i>
-                                {{'geral.bonus' | translate}}
-                            </a>
-                            <a class="dropdown-btn-filled" [routerLink]="['clientes/configuracoes']"
-                            routerLinkActive="router-link-active"
-                            *ngIf="isCliente">
-                                <i class="fa fa-solid fa-cogs mb-2"></i>
-                                {{'geral.configuracoes' | translate}}
-                            </a>
+<!--                            <a class="dropdown-btn-filled" [routerLink]="['clientes/rollover']"-->
+<!--                            routerLinkActive="router-link-active"-->
+<!--                            *ngIf="isCliente">-->
+<!--                                <i class="fa fa-solid fa-gift mb-2"></i>-->
+<!--                                {{'geral.bonus' | translate}}-->
+<!--                            </a>-->
+<!--                            <a class="dropdown-btn-filled" [routerLink]="['clientes/configuracoes']"-->
+<!--                            routerLinkActive="router-link-active"-->
+<!--                            *ngIf="isCliente">-->
+<!--                                <i class="fa fa-solid fa-cogs mb-2"></i>-->
+<!--                                {{'geral.configuracoes' | translate}}-->
+<!--                            </a>-->
                             <a class="dropdown-btn-filled" [routerLink]="['clientes/indique-ganhe']"
                             routerLinkActive="router-link-active"
                             *ngIf="isCliente && indiqueGanheHabilitado">
@@ -578,21 +566,21 @@
                 </a>
             </div>
         </ng-template>
-        <div class="btn-group language-dropdown hide-mobile" ngbDropdown>
-            <button class="btn" type="button" id="dropdownLanguage" ngbDropdownToggle>
-                <span class="flag-icon {{linguagemSelecionada === 'pt' ? 'flag-icon-br' : 'flag-icon-us'}} flag-icon-squared"></span>
-            </button>
-            <div class="language-dropdown-menu position-absolute" aria-labelledby="dropdownLanguage" ngbDropdownMenu>
-                <a class="m-2 p-0 dropdown-item" (click)="useLanguage('pt')">
-                    <span class="flag-icon flag-icon-br flag-icon-squared"></span>
-                    {{'geral.portugues' | translate}}
-                </a>
-                <a class="m-2 p-0 dropdown-item" (click)="useLanguage('en')">
-                    <span class="flag-icon flag-icon-us flag-icon-squared"></span>
-                    {{'geral.ingles' | translate}}
-                </a>
-            </div>
-        </div>
+<!--        <div class="btn-group language-dropdown hide-mobile" ngbDropdown>-->
+<!--            <button class="btn" type="button" id="dropdownLanguage" ngbDropdownToggle>-->
+<!--                <span class="flag-icon {{linguagemSelecionada === 'pt' ? 'flag-icon-br' : 'flag-icon-us'}} flag-icon-squared"></span>-->
+<!--            </button>-->
+<!--            <div class="language-dropdown-menu position-absolute" aria-labelledby="dropdownLanguage" ngbDropdownMenu>-->
+<!--                <a class="m-2 p-0 dropdown-item" (click)="useLanguage('pt')">-->
+<!--                    <span class="flag-icon flag-icon-br flag-icon-squared"></span>-->
+<!--                    {{'geral.portugues' | translate}}-->
+<!--                </a>-->
+<!--                <a class="m-2 p-0 dropdown-item" (click)="useLanguage('en')">-->
+<!--                    <span class="flag-icon flag-icon-us flag-icon-squared"></span>-->
+<!--                    {{'geral.ingles' | translate}}-->
+<!--                </a>-->
+<!--            </div>-->
+<!--        </div>-->
     </div>
 </div>
 
@@ -602,50 +590,65 @@
 
 <ng-template #menuTemplate>
     <div #menu class="d-flex">
-        <div class="category" *ngIf="esporteAtivo">
-            <a [routerLink]="['/esportes']" routerLinkActive="active">
-                <span>{{'menu.esportes' | translate}}</span>
-            </a>
-        </div>
-        <div class="category" *ngIf="cassinoAtivo">
-            <a [ngClass]="activeMenuCassino()" [routerLink]="['/casino/c']">
-                <span>{{'menu.cassino' | translate}}</span>
-            </a>
-        </div>
-        <div class="category" *ngIf="cassinoAtivo">
-            <a [ngClass]="activeMenuCassinoLive()" [routerLink]="['/casino/cl']">
-                <span>{{'menu.cassino-aovivo' | translate}}</span>
-            </a>
-        </div>
-        <div class="category" *ngIf="virtuaisAtivo">
-            <a [routerLink]="['/casino/v']" routerLinkActive="active">
-                <span>{{'menu.virtuais' | translate}}</span>
-            </a>
-        </div>
-        <div class="category" *ngIf="desafioHabilitado">
-            <a [routerLink]="['/desafios']" routerLinkActive="active">
-                <span>{{'menu.desafio' | translate}}</span>
-            </a>
-        </div>
-        <div class="category" *ngIf="acumuladaoHabilitado">
-            <a [routerLink]="['/acumuladao']" routerLinkActive="active">
-                <span>{{'menu.acumuladao' | translate}}</span>
-            </a>
-        </div>
-        <div class="category" *ngIf="(loteriasHabilitado && (seninhaAtiva || quininhaAtiva)) || loteriaPopularAtiva">
-            <a [routerLink]="['/loterias']" routerLinkActive="active">
-                <span>{{'menu.loteria' | translate}}</span>
-            </a>
-        </div>
+<!--        <div class="category" *ngIf="esporteAtivo">-->
+<!--            <a [routerLink]="['/esportes']" routerLinkActive="active">-->
+<!--                <span>{{'menu.esportes' | translate}}</span>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="category" *ngIf="cassinoAtivo">-->
+<!--            <a [ngClass]="activeMenuCassino()" [routerLink]="['/casino/c']">-->
+<!--                <span>{{'menu.cassino' | translate}}</span>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="category" *ngIf="cassinoAtivo">-->
+<!--            <a [ngClass]="activeMenuCassinoLive()" [routerLink]="['/casino/cl']">-->
+<!--                <span>{{'menu.cassino-aovivo' | translate}}</span>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="category" *ngIf="virtuaisAtivo">-->
+<!--            <a [routerLink]="['/casino/v']" routerLinkActive="active">-->
+<!--                <span>{{'menu.virtuais' | translate}}</span>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="category" *ngIf="desafioHabilitado">-->
+<!--            <a [routerLink]="['/desafios']" routerLinkActive="active">-->
+<!--                <span>{{'menu.desafio' | translate}}</span>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="category" *ngIf="acumuladaoHabilitado">-->
+<!--            <a [routerLink]="['/acumuladao']" routerLinkActive="active">-->
+<!--                <span>{{'menu.acumuladao' | translate}}</span>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="category" *ngIf="(loteriasHabilitado && (seninhaAtiva || quininhaAtiva)) || loteriaPopularAtiva">-->
+<!--            <a [routerLink]="['/loterias']" routerLinkActive="active">-->
+<!--                <span>{{'menu.loteria' | translate}}</span>-->
+<!--            </a>-->
+<!--        </div>-->
         <div class="category" >
             <a [routerLink]="['/rifas']" routerLinkActive="active">
-                <span>{{'menu.rifas' | translate}}</span>
+                <span>Campanhas</span>
             </a>
         </div>
-        <div class="category" *ngIf="paginaPromocaoHabilitado">
-            <a [routerLink]="['/promocao']" routerLinkActive="active">
-                <span>{{'menu.promocao' | translate}}</span>
-            </a>
-        </div>
+<!--        <div class="category" >-->
+<!--            <a [routerLink]="['/gahadores']" routerLinkActive="active">-->
+<!--                <span>Ganhadores</span>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="category" >-->
+<!--            <a [routerLink]="['/ajuda']" routerLinkActive="active">-->
+<!--                <span>Ajuda</span>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="category" >-->
+<!--            <a [routerLink]="['/contato']" routerLinkActive="active">-->
+<!--                <span>Contato</span>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="category" *ngIf="paginaPromocaoHabilitado">-->
+<!--            <a [routerLink]="['/promocao']" routerLinkActive="active">-->
+<!--                <span>{{'menu.promocao' | translate}}</span>-->
+<!--            </a>-->
+<!--        </div>-->
     </div>
 </ng-template>
